frontend/app/orders-history/page.module.css
.mainContainerHistory {
    min-height: 100dvh;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    padding: 0 1rem;
}

.imageWrapper {
    position: relative;
    width: 100%;
    aspect-ratio: 3/2;
}

.formReorder {
    max-width: 522px;
    width: 100%;
}

.mainContItemInCartHistory {
    width: 100%;
}

.bottomLineHistory {
    display: block;
    width: 100%;
    height: 0.07rem;
    margin: 1rem 0;
    background: #f60606;
    filter: blur(0.03rem);
    opacity: 0.8;
}

.submitHistoryBtn {
    margin-bottom: 1rem;
}

.idCreatedAt {
    font-weight: 600;
}

.itemInCartHistory {
    display: flex;
    flex-direction: column;
}

.totalOrderPrice {
}

@media (min-width: 768px) {
    .mainContItemInCartHistory {
        display: grid;
        gap: 4rem;
        padding: 0 1rem;
        grid-template-columns: 1fr 1fr;
        width: 100%;
        align-items: start;
    }

    .imageWrapper {
        width: 300px;
        flex-shrink: 0;
    }

    .submitHistoryBtn {
        margin-bottom: 2rem;
    }
}

